--- a/index.html
+++ b/index.html
@@ -22,9 +22,14 @@
 			<ul class="nav">
 				<li><img id="logo" src="./images/logo.jpeg" style="width: 55px; height: ;"></li>
 				<li style="list-style: none; display: inline">
-					<a href="#">Home</a> <a href="#about">About</a> <a href="#what-we-offer">what-we-offer</a> <a href="#packages">packages</a> <a href="#Gallery">Gallery</a> <a href="#Get-in-touch">Get-in-touch</a>
+					<a href="#">Home</a>    
 					<div class="animation start-home"></div>
 				</li>
+				<li><a href="#about">About</a></li>
+				<li><a href="#what-we-offer">what-we-offer</a></li>
+				<li> <a href="#packages">packages</a></li>
+				<li><a href="#Gallery">Gallery</a></li>
+				<li><a href="#Get-in-touch">Get-in-touch</a></li>
 			</ul>
 		</nav><!-- <div class="animation start-home"></div> -->
 		<!-- marque -->
