--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 	<meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport"><!-- Title -->
 	<title>E - Workspace Centre - Embracing Change</title><!-- Favicon -->
 	<link href="favicon.ico" rel="shortcut icon"><!-- Font -->
-	<link href="../../fonts.googleapis.com/css2e9cf.css?family=Roboto:wght@400;500;700&amp;display=swap" rel="stylesheet"><!-- CSS Implementing Plugins -->
+	<link href="assets/css/fonts/css2e9cf.css" rel="stylesheet"><!-- CSS Implementing Plugins -->
 	<link href="assets/css/vendor.min.css" rel="stylesheet"><!-- CSS Space Template -->
-	<link href="assets/css/theme.minc619.css?v=1.0" rel="stylesheet">
+	<link href="assets/css/theme.minc619.css" rel="stylesheet">
 </head>
 <body>
 	<!-- ========== HEADER ========== -->
