--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
 							you <span class="text-warning"><span class="js-typedjs" data-hs-typed-options='{ "strings": ["private offices.", "a coworking desk.", "meeting rooms."], "typeSpeed": 90, "loop": true, "backSpeed": 30, "backDelay": 2500 }'></span></span></h1>
 						</div><!-- End Heading -->
 						<div class="w-lg-85">
-							<a class="btn btn-primary" href="page-login.html">Contact us</a>
+							<!-- <a class="btn btn-primary" href="page-login.html">Contact us</a> -->
 							<div class="form-text">
-								We have several space to hire / rent. Private with all working amenities.
+								<h1>We have several space to hire / rent. Private with all working amenities.</h1>
 							</div><!-- Icon -->
 							<a class="d-none d-md-inline-block position-md-absolute bottom-0 start-0" href="#scrollToContent"><span class="svg-icon svg-icon-lg text-primary"><svg height="24" viewbox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
 							<rect fill="#035A4B" height="10" opacity="0.3" rx="1" width="2" x="11" y="4"></rect>
@@ -112,7 +112,7 @@
 								You have the ability to expand your office needs within our centre Our spaces are not only generously spacious but 
 								also modern and stylish. We’re still growing. We want to help you do the same.</span></p>
 							
-							<button onopen="myFunction()" id="myBtn">Read more</button>
+							<button onclick="myFunction()" id="myBtn">Read more</button>
 							<script>
 								function myFunction() {
 								  var dots = document.getElementById("dots");
@@ -280,7 +280,11 @@
 								<div class="card-footer text-center">
 									<div class="d-grid mb-2">
 										<div class="col-md-6">
-											<p>Email</p><input class="form-control form-value" id="email" name="email" placeholder="" required="" type="email">
+											<a class="js-animation-link btn btn-ghost-secondary btn-no-focus me-2 me-lg-0" href="javascript:;" role="button" data-bs-toggle="modal" data-bs-target="#signupModal"
+											data-hs-show-animation-options='{
+											"targetSelector": "#signupModalFormLogin",
+											"groupName": "idForm"
+						  				}'>CONTACT US </a>
 										</div>
 									</div>
 									<p class="card-text text-muted small">Pay on book</p>
