--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
 					</div><!-- End Col -->
 					<div class="col-md-5 banner-half-end">
 						<!-- Images -->
-						<div class="d-none d-md-block bg-img-center h-100" style="background-image: url(assets/img/466x510/image\ 1.jpg);"></div>
-						<div class="d-md-none w-75 mx-auto ms-sm-auto"><img alt="Image Description" class="img-fluid" src="assets/img/466x510/image 1.jpg"></div><!-- End Images -->
+						<div class="d-none d-md-block bg-img-center h-100" style="background-image: url(assets/img/466x510/image7.jpeg);"></div>
+						<div class="d-md-none w-75 mx-auto ms-sm-auto"><img alt="Image Description" class="img-fluid" src="assets/img/466x510/image7.jpeg"></div><!-- End Images -->
 					</div><!-- End Col -->
 				</div><!-- End Row -->
 			</div>
@@ -224,8 +224,8 @@
 								<div class="card-header text-center">
 									<div class="mb-2">
 										<span class="fs-5 align-top text-dark fw-bold">KES</span> <span class="fs-2 text-dark fw-bold" data-hs-toggle-switch-item-options='{ "min": 29, "max": 19 }' id="pricingCount1">2000</span> 
-										<span>/hr <br>Weekly subscription 8,000</span>
-										<span>/hr <br>Monthly subscription 20,000</span>
+										<span> <br>Weekly subscription 8,000</span>
+										<span> <br>Monthly subscription 20,000</span>
 									</div>
 									<h3 class="card-title">EXECUTIVE PRIVATE OFFICES</h3>
 									<p class="card-text">We have designed fantastic and spacious offices with modern furnishes. With beautiful window views and balcony.Designed for 1-4 people, you have dedicated space and access to all our amenities.</p>
@@ -250,9 +250,10 @@
 												"groupName": "idForm"
 						  				}'>CONTACT US</a>
 									</div>
-									<p class="card-text text-muted small">Pay on book</p>
+									<!-- <p class="card-text text-muted small">Pay on book</p> -->
 								</div>
-							</div><!-- End Card -->
+							</div>
+							<!-- End Card -->
 						</div><!-- End Col -->
 						<div class="col-md mb-3 mb-md-0">
 							<!-- Card -->
@@ -260,8 +261,8 @@
 								<div class="card-header text-center">
 									<div class="mb-2">
 										<span class="fs-5 align-top text-dark fw-bold">KES</span> <span class="fs-2 text-dark fw-bold" data-hs-toggle-switch-item-options='{ "min": 49, "max": 39 }' id="pricingCount2">1200</span> <span>/day</span>
-										<span>/hr <br>Weekly subscription 4500</span>
-										<span>/hr <br>Monthly subscription 18,000</span>
+										<span> <br>Weekly subscription 4500</span>
+										<span><br>Monthly subscription 18,000</span>
 									</div>
 									<h3 class="card-title">OPEN PLAN SPACE</h3>
 									<p class="card-text">Amaizing space comfort for a productive day working.Grab your seat at the common area, fire up your laptop and get to work with access to our amenities and meeting rooms.</p>
@@ -287,7 +288,7 @@
 						  				}'>CONTACT US </a>
 										</div>
 									</div>
-									<p class="card-text text-muted small">Pay on book</p>
+									<!-- <p class="card-text text-muted small">Pay on book</p> -->
 								</div>
 							</div><!-- End Card -->
 						</div><!-- End Col -->
@@ -297,8 +298,8 @@
 								<div class="card-header text-center">
 									<div class="mb-2">
 										<span class="fs-5 align-top text-dark fw-bold">KES</span> <span class="fs-2 text-dark fw-bold" data-hs-toggle-switch-item-options='{ "min": 69, "max": 59 }' id="pricingCount3">2000</span> 
-										<span>/hr <br>Walk ins Daily rate 7,000 </span>
-										<span>/hr <br>Weekly subscription 32,000</span>
+										<span> <br>Walk ins Daily rate 7,000 </span>
+										<span> <br>Weekly subscription 32,000</span>
 									</div>
 									<h3 class="card-title">MEETING & BOARD ROOM</h3>
 									<p class="card-text">Our rooms are equipped with whiteboards, a wall-mounted screen, HDMI links, stationery to ensure that your meeting runs without a hitch.space for 10-12 people</p>
@@ -322,7 +323,7 @@
 						  				}'>CONTACT US </a>
 										
 									</div>
-									<p class="card-text text-muted small">Pay on book</p>
+									<!-- <p class="card-text text-muted small">Pay on book</p> -->
 								</div>
 							</div><!-- End Card -->
 						</div><!-- End Col -->
