--- a/index.html
+++ b/index.html
@@ -388,6 +388,12 @@
 							<a class="btn btn-icon btn-sm btn-soft-light rounded-circle" href="#"><i class="bi-facebook"></i></a>
 						</li>
 						<li class="list-inline-item">
+							<a class="btn btn-icon btn-sm btn-soft-light rounded-circle" href="#"><i class="bi-google"></i></a>
+						</li>
+						<li class="list-inline-item">
+							<a class="btn btn-icon btn-sm btn-soft-light rounded-circle" href="#"><i class="bi-instagram"></i></a>
+						</li>
+						<li class="list-inline-item">
 							<a class="btn btn-icon btn-sm btn-soft-light rounded-circle" href="#"><i class="bi-twitter"></i></a>
 						</li>
 					</ul><!-- End Socials -->
@@ -395,6 +401,7 @@
 			</div>
 		</div>
 	</footer><!-- ========== END FOOTER ========== -->
+	
 	<!-- ========== SECONDARY CONTENTS ========== -->
 	<!-- Sign Up -->
 	<div aria-hidden="true" class="modal fade" id="signupModal" role="dialog" tabindex="-1">
