--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 		<br>
 		<br>
 		<!-- Hero -->
-		<div class="bg-soft-primary-light overflow-hidden">
+		<!-- <div class="bg-soft-primary-light overflow-hidden"> -->
 			<div id="plans"></div>
 			<div class="container content-space-1 content-space-md-2">
 				<!-- Heading -->
@@ -223,7 +223,7 @@
 							<div class="card card-lg">
 								<div class="card-header text-center">
 									<div class="mb-2">
-										<span class="fs-5 align-top text-dark fw-bold">KES</span> <span class="fs-2 text-dark fw-bold" data-hs-toggle-switch-item-options='{ "min": 29, "max": 19 }' id="pricingCount1">2000</span> 
+										<span class="fs-5 align-top text-dark fw-bold">KES</span> <span class="fs-2 text-dark fw-bold" data-hs-toggle-switch-item-options='{ "min": 29, "max": 19 }' id="pricingCount1">2000</span> <span>/day</span>
 										<span> <br>Weekly subscription 8,000</span>
 										<span> <br>Monthly subscription 20,000</span>
 									</div>
@@ -297,7 +297,7 @@
 							<div class="card card-lg">
 								<div class="card-header text-center">
 									<div class="mb-2">
-										<span class="fs-5 align-top text-dark fw-bold">KES</span> <span class="fs-2 text-dark fw-bold" data-hs-toggle-switch-item-options='{ "min": 69, "max": 59 }' id="pricingCount3">2000</span> 
+										<span class="fs-5 align-top text-dark fw-bold">KES</span> <span class="fs-2 text-dark fw-bold" data-hs-toggle-switch-item-options='{ "min": 69, "max": 59 }' id="pricingCount3">2000</span> <span>/hr</span>
 										<span> <br>Walk ins Daily rate 7,000 </span>
 										<span> <br>Weekly subscription 32,000</span>
 									</div>
