--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 		<br>
 		<br>
 		<!-- Hero -->
-		<!-- <div class="bg-soft-primary-light overflow-hidden"> -->
+		<div class="bg-soft-primary-light overflow-hidden">
 			<div id="plans"></div>
 			<div class="container content-space-1 content-space-md-2">
 				<!-- Heading -->
