--- a/index.html
+++ b/index.html
@@ -385,16 +385,14 @@
 					<!-- Socials -->
 					<ul class="list-inline mb-0">
 						<li class="list-inline-item">
-							<a class="btn btn-icon btn-sm btn-soft-light rounded-circle" href="#"><i class="bi-facebook"></i></a>
+							<a class="btn btn-icon btn-sm btn-soft-light rounded-circle" href="https://www.facebook.com/E-Workspace-Center-112162457952312"><i class="bi-facebook"></i></a>
+						</li>
+						
+						<li class="list-inline-item">
+							<a class="btn btn-icon btn-sm btn-soft-light rounded-circle" href="https://www.instagram.com/eworkspacecenter/"><i class="bi-instagram"></i></a>
 						</li>
 						<li class="list-inline-item">
-							<a class="btn btn-icon btn-sm btn-soft-light rounded-circle" href="#"><i class="bi-google"></i></a>
-						</li>
-						<li class="list-inline-item">
-							<a class="btn btn-icon btn-sm btn-soft-light rounded-circle" href="#"><i class="bi-instagram"></i></a>
-						</li>
-						<li class="list-inline-item">
-							<a class="btn btn-icon btn-sm btn-soft-light rounded-circle" href="#"><i class="bi-twitter"></i></a>
+							<a class="btn btn-icon btn-sm btn-soft-light rounded-circle" href="https://twitter.com/e_workspaceC"><i class="bi-twitter"></i></a>
 						</li>
 					</ul><!-- End Socials -->
 				</div>
