--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
 							<h4>Contact us</h4>
 							<p>Our team is online 24/7 to answer queries.</a></p>
 						</div><!-- End Heading -->
-						<form action="Scripts/php/contact-form.php" class="form-box form-ajax" data-email="hello@indisoftltd.com" method="post">
+						<form action="Scripts/php/contact-form.php" class="form-box form-ajax" data-email="hello@eworkspace.co.ke" method="post">
 							<div class="row">
 								<div class="col-md-6">
 									<p>Name</p><input class="form-control form-value" id="name" name="name" placeholder="" required="" type="text">
