--- a/index.html
+++ b/index.html
@@ -364,11 +364,7 @@
 			</div><!-- End Heading -->
 			<div class="text-center">
 				<div id="contact">
-					<a class="js-animation-link btn btn-ghost-secondary btn-no-focus me-2 me-lg-0" href="javascript:;" role="button" data-bs-toggle="modal" data-bs-target="#signupModal"
-					data-hs-show-animation-options='{
-							"targetSelector": "#signupModalFormLogin",
-							"groupName": "idForm"
-						  }'>Contact Us</a>
+					<a class="js-animation-link btn btn-ghost-secondary btn-no-focus me-2 me-lg-0" href="http://eworkspace.co.ke/contact" role="button">Contact Us</a>
 			</div>
 			</div>
 		</div><!-- End CTA -->
