add all changes

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 						<p>The E-workspace center offers a professional platform for start-ups, SMEs, Tech Companies and seasoned businesses. 
 							Good things happen when you surround yourself with like-minded individuals,we pride ourselves in hosting a diverse community
 							 of curious minds who take networking, entrepreneurship, and collaboration to a whole new level.<span id="dots">...</span><span id="more">Wheather you are scaling your business, looking for a new place to network, or part of a global team 
-								that’s setting up a satellite office, The E-work space center offers you a work space that’s perfect for you to 
+								that is setting up a satellite office, The E-work space center offers you a work space that’s perfect for you to 
 								fulfill your business goals and to suit business needs based on your preferences. E work space is a newly established 
 								fully furnished serviced office space provider located at the heart of Eldoret (Daima Towers ) one of the most prestigious 
 								building We have spacious, modern and trendy office spaces with a plug and play model for all types of businesses. 
@@ -110,7 +110,7 @@
 								We provide the resources and learning opportunities to scale your business for long term success. As a Kenyan startup, 
 								we understand the unique needs of our clients. Well-crafted, tailor-made solution which suits your business needs and budget. 
 								You have the ability to expand your office needs within our centre Our spaces are not only generously spacious but 
-								also modern and stylish. We’re still growing. We want to help you do the same.</span></p>
+								also modern and stylish. We are still growing. We want to help you do the same.</span></p>
 							
 							<button onclick="myFunction()" id="myBtn">Read more</button>
 							<script>
